Correctly compute parent of AXMenuListOption

BUG=687835

Review-Url: https://codereview.chromium.org/2670023002
Cr-Commit-Position: refs/heads/master@{#451530}

Former-commit-id: dbc08d987df8d944144250b50c6cffc044d517c1